# aviutl2-cli

./: Cargo.toml  README.md  mise.toml  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: catalog.rs  catalog_schema.rs  cli.rs  config.rs  log_writer.rs  main.rs  schema.json  util.rs
src/commands/: develop.rs  init.rs  mod.rs  prepare.rs  preview.rs  release.rs  schema.rs
src/commands/snapshots/: au2__commands__init__tests__init_template.snap
tests/: e2e.rs  prepare.rs
typespec/: main.tsp
