[package]
name = "aviutl2-cli"
version = "0.6.3"
edition = "2024"
authors = ["Nanashi. <sevenc7c.com>"]
license = "MIT"
description = "AviUtl2のプラグイン・スクリプト開発に便利なコマンドラインツール"
repository = "https://github.com/sevenc-nanashi/aviutl2-cli"

[[bin]]
name = "au2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
dedent = "0.1.1"
dialoguer = "0.12.0"
env_logger = "0.11.8"
fs-err = "3.2.2"
log = "0.4.29"
pathdiff = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-constant = "0.1.0"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting"] }
toml = "0.9.11"
ureq = { version = "3.1.4", features = ["json"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zip = "7.2.0"

[dev-dependencies]
assert_cmd = "2.0.16"
insta = "1.46.3"
predicates = "3.1.3"
tempfile = "3.14.0"
