[package]
name = "aviutl2-cli"
version = "0.8.1"
edition = "2024"
authors = ["Nanashi. <sevenc7c.com>"]
license = "MIT"
description = "AviUtl2のプラグイン・スクリプト開発に便利なコマンドラインツール"
repository = "https://github.com/sevenc-nanashi/aviutl2-cli"

[package.metadata.binstall]
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/au2-v{ version }-linux"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/au2-v{ version }-windows.exe"

[[bin]]
name = "au2"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
configparser = "3.1.0"
dedent = "0.1.1"
dialoguer = "0.12.0"
fs-err = "3.2.2"
fs_extra = "1.3.0"
pathdiff = "0.2.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-constant = "0.1.0"
serde_json = "1.0.145"
sevenz-rust2 = "0.20.2"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.14.0"
time = { version = "0.3.44", features = ["formatting"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = { version = "3.1.4", features = ["json"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zip = "7.2.0"

[dev-dependencies]
assert_cmd = "2.0.16"
insta = "1.46.3"
predicates = "3.1.3"
tempfile = "3.14.0"
